# nsgallery

./: CMakeLists.txt  README.adoc  config-dev.yaml
src/: app.cpp  app.hpp  config.cpp  config.hpp  file_cache.hpp  image.cpp  image.hpp  image_source.cpp  image_source.hpp  main.cpp  metadata.cpp  metadata.hpp  representation.cpp  representation.hpp  test.cpp  utils.hpp
statics/: style.css
templates/: head.html  index.html  nav.html  photo.html
